# casp16

./: .gitignore  README.md  environment.txt  environment.yml  setup_third_parties.sh
datasets/cifs/Test30/: 5kh8.cif  5t83.cif  5yyn.cif  5zal.cif  6fz0.cif  6hag.cif  6mwn.cif  6ufj.cif  6v4x.cif  6vmy.cif  7d7v.cif  7d81.cif  7kga.cif  7kju.cif
datasets/pdbs/Test30/5kh8.A/: 5kh8_chainA.out
datasets/pdbs/Test30/5mmi.B/: 5mmi_chainB.out
datasets/pdbs/Test30/5t83.A/: 5t83_chainA.out
datasets/pdbs/Test30/5xxb.3/: 5xxb_chain3.out
datasets/pdbs/Test30/5xy3.3/: 5xy3_chain3.out
datasets/test/scores/: energies_DFIRERNA.txt  energies_rsRNASP.txt  energies_summary.csv
notebooks/: M1209.ipynb  M1282.ipynb  M1293-complex_rmsd.ipynb  M1293.ipynb  R0271_AF3.ipynb  R1203.ipynb  R1203_1000.ipynb  R1203_1000_top100.ipynb  R1203_BRiQ_rerun.ipynb  R1209.ipynb  R1211.ipynb  R1212.ipynb  R1221.ipynb  R1241.ipynb  R1242.ipynb  R1248-1.ipynb  R1248-2.ipynb  R1248.ipynb  R1255.ipynb  R1256.ipynb  R1282.ipynb  R1283v1.ipynb  R1286.ipynb  R1293.ipynb
scripts/: calc_rmsd.py  download_cif_from_file.py  eval_scores.py  run_briq_refine_batch.sh  run_dssr_recursive.py
scripts/prep_data/: extract_chains_from_cif.py
src/: __init__.py
src/score/: DFIRE_RNA.py  RNA_BRiQ.py  cgRNASP.py  rsRNASP.py
test/: S_000125.briq.in  S_000125.briq.out  S_000126.briq.in  S_000126.briq.out  S_000132.briq.in  S_000132.briq.out  energies_RNABRiQ.txt  energies_summary.csv  rmsd_matrix_sorted_id.csv  rmsd_matrix_sorted_id.npy
tmp/: CMakeLists.txt  EnergyEvaluation.cpp
(+61 files in other folders)
